# gridmpiwait

./: CMakeLists.txt  README.md  main.cpp  main_noopt.cpp  submit.sh
